--- a/SIC43NT_Webserver/SIC43NT_Webserver.csproj
+++ b/SIC43NT_Webserver/SIC43NT_Webserver.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
