Add Dummy Connection String to appsettings.json.

--- a/SIC43NT_Webserver/appsettings.json
+++ b/SIC43NT_Webserver/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DefaultEndpointsProtocol=https;AccountName=<ACCOUNT NAME>;AccountKey=<ACCOUNT KEY>;EndpointSuffix=core.windows.net"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
