--- a/SIC43NT_Webserver/appsettings.json
+++ b/SIC43NT_Webserver/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DefaultEndpointsProtocol=https;AccountName=<ACCOUNT NAME>;AccountKey=<ACCOUNT KEY>;EndpointSuffix=core.windows.net"
+    "DefaultConnection": "DefaultEndpointsProtocol=https;AccountName=DummyName;AccountKey=DummyKey;EndpointSuffix=core.windows.net"
   },
   "Logging": {
     "LogLevel": {
